# FWUI

./: .gitignore  CMakeLists.txt  README.md  flake.nix  fwui.gemspec
.github/workflows/: ci.yml  release.yml
data/: projects.json
docs/: baked-templates.md  build.md  components.md  cpp-api.md  docx-odt.md  embedded.md  fwui-native.md  getting-started.md  hot-reload.md  index.md  lumina.md  packed-builder.md  performance.md  pipe-operator.md  ruby-dsl.md  server.md  ssg.md  use-cases.md  websocket.md
elements/: containers.cpp  decorators.cpp  factories.cpp  helpers.cpp  html.cpp  image.cpp  screen.cpp  text.cpp
examples/cpp/: CMakeLists.txt  main.cpp
examples/ruby/: demo.rb  server.rb
fwui-native/: fwui-native.gemspec
fwui-native/ext/fwui_native/: extconf.rb  fwui_docx.cpp  fwui_inja.cpp  fwui_native.c
fwui-native/lib/fwui/: native.rb
fwui-native/lib/fwui/native/: component.rb  doc.rb  docx.rb  packed_builder.rb
fwui-native/test/: bench_concurrent.rb  bench_dashboard.rb  bench_levels.rb  bench_memory.rb  bench_workers.rb  test_docx.rb  test_native.rb
include/: elements.hpp  image.hpp  node.hpp  pageManager.hpp  pages.hpp
include/fwui/: core.hpp  decorators.hpp  elements.hpp  embedded.hpp  file_watcher.hpp  fwui.hpp  hot_reload.hpp  registry.hpp  renderer.hpp  template_engine.hpp  template_page_loader.hpp
include/fwui/pages/: ssg_pages.hpp
ruby/lib/: fwui.rb
ruby/lib/fwui/: cli.rb  file_watcher.rb  hot_reload_js.rb  interactive_hub.rb  lumina_loader.rb  markdown.rb  page_loader.rb  platform.rb  registry.rb  version.rb  websocket.rb  ws_hub.rb
ruby/tests/: test_packed_native.rb  test_packed_pure.rb
src/: core.cpp  decorators.cpp  elements.cpp  embed_gen.cpp  file_watcher.cpp  hot_reload.cpp  main.cpp  registry.cpp  renderer.cpp  ssg.cpp  template_engine.cpp  template_page_loader.cpp  utils.cpp
src/pages/: about.cpp  contacts.cpp  footer.cpp  header.cpp  navigation.cpp  projects.cpp  ssg_pages.cpp
static/: contactForm.html  debug.js  script.js  style.css
template/: index.html  project.html
tests/: bench_cpp.cpp  bench_memory.cpp  test_decorators.cpp  test_elements.cpp  test_node.cpp  test_registry.cpp  test_renderer.cpp  test_template_engine.cpp
